Updated all projects to use CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,9 @@
 cmake_minimum_required(VERSION 3.30)
-project(GuessingGame)
-project(DataTypes)
-project(UserDataTypes)
+project(CSC195)
 
 set(CMAKE_CXX_STANDARD 14)
 
-include_directories(DataTypes)
-include_directories(GuessingGame)
-include_directories(UserDataTypes)
-
-add_executable(GuessingGame
-    GuessingGame/Game.cpp
-    GuessingGame/Game.h
-    GuessingGame/GuessingGame.cpp
-)
-add_executable(DataTypes
-        DataTypes/DataTypes.cpp
-        DataTypes/Employee.cpp
-        DataTypes/Employee.h
-)
-add_executable(UserDataTypes
-        UserDataTypes/Sandwich.cpp
-        UserDataTypes/Sandwich.h
-        UserDataTypes/UserDatatypes.cpp
-)
+add_subdirectory(DataTypes)
+add_subdirectory(GuessingGame)
+add_subdirectory(HelloWorld)
+add_subdirectory(UserDataTypes)
