created two assignments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(DataTypes)
 add_subdirectory(GuessingGame)
 add_subdirectory(HelloWorld)
 add_subdirectory(UserDataTypes)
+add_subdirectory(Memory)
+add_subdirectory(MemoryReview)
