Created Container project, took class notes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(HelloWorld)
 add_subdirectory(UserDataTypes)
 add_subdirectory(Memory)
 add_subdirectory(MemoryReview)
+add_subdirectory(Container)
