Completed the Contianers assignment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(UserDataTypes)
 add_subdirectory(Memory)
 add_subdirectory(MemoryReview)
 add_subdirectory(Container)
+add_subdirectory(Containers)
