Created OOP C++ classwork

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(Memory)
 add_subdirectory(MemoryReview)
 add_subdirectory(Container)
 add_subdirectory(Containers)
+add_subdirectory(OOP)
