Complete Database assignment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(MemoryReview)
 add_subdirectory(Container)
 add_subdirectory(Containers)
 add_subdirectory(OOP)
+add_subdirectory(Database)
