Complete Database, Fail, Overloading, Streams

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,6 @@ add_subdirectory(Container)
 add_subdirectory(Containers)
 add_subdirectory(OOP)
 add_subdirectory(Database)
+add_subdirectory(Fail)
+add_subdirectory(Overloading)
+add_subdirectory(Streams)
